NOCC 0.9.7    ?? ??, 2004

    * Eliminated the javascript requirement when adding or removing
      attachments while composing a message, javascript validation is still
      performed (Leif Gustafson, RFE #602492).
    * Moved (again) <? to <?php, better compatibility when short tags are
      disabled (Arnaud Boudou, bug #1039217).
    * In mail list, clicking on the sender email and/or name now open a new
      mail window with the "To:" field filled with the email address (Arnaud
      Boudou).
    * Fix issue where an email address from a mailto: link into a message
      was not used when clicked on (Arnaud Boudou, bug #1034907).
    * Fix issue where Nocc use imap functions to open message which does not
      exists anymore, and cause IMAP toolkit crash (Leif Gustafson, patch
      #133169).
    * Add support for SMTP AUTH PLAIN and SMTP AUTH LOGIN (Arnaud Boudou, RFE 
      #569828).
    * Add possibility to allow a limited set of characters for login (Arnaud
      Boudou, RFE #979305).
    * Add compatibility with PHP5's register_long_arrays=On, but break
      compatibility with PHP version prior than 4.1.0 (Arnaud Boudou).
    * Add possibility for force default language rather than browser preference
      ("zverj", patch #1016925).

NOCC 0.9.6    August 23, 2004

    * Fixed issue with IMAP connection which prevents "previous message" and
      "next message" links display (Arnaud Boudou).
    * Strip META flags outside the HEAD block within HTML mails (Arnaud Boudou,
      RFE #489443).
    * Fixed problem where no attachment shown when mail contains only an
      attachment without message (Arnaud Boudou, bug #621260).
    * Added possibility to mark a message as read or unread - IMAP only
      (Arnaud Boudou, RFE #587725).
    * Added typed domain names option and login suffix option (Leif Gustafson,
      patch #975016).
    * Added graphical smilies support (Arnaud Boudou).
    * Added IMAP folder delete (Arnaud Boudou).